Refactor Hospital Management System with Enhanced UI and Login Feature
- Updated HospitalSystem.java to improve user interface with color-coded messages and structured headers for better readability.
- Introduced a new Dashboard class to display a welcoming screen with system credits and logo.
- Implemented a Login class to handle user authentication before accessing the main system functionalities.
- Enhanced patient record display in Patient.java with formatted output for better clarity.
- Added a batch file for easy compilation and execution of the Java application.
- Updated Main.java to integrate the new login process and streamline the main menu options.
- Improved error handling and user prompts throughout the application for a smoother user experience.